2012-12-08  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* sysdeps/unix/sysv/linux/s390/jmp-unwind.c (_longjmp_unwind):
	Declare LOCAL_VAR as char.

2012-12-04  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/powerpc/sem_post.c (__old_sem_post):
	Cast result of atomic_increment_val to (void) instead of storing
	in otherwise-unused variable.

2012-12-03  Allan McRae  <allan@archlinux.org>

	* Makefile (LDFLAGS-tst-cond24, LDFLAGS-tst-cond25): Remove.

2012-11-26  H.J. Lu  <hongjiu.lu@intel.com>

	* unwind.c (__pthread_unwind): Pass address of unwind_cleanup
	to THREAD_SETMEM.
	* sysdeps/i386/tls.h: Include <libc-internal.h>.
	(THREAD_SETMEM): Use cast_to_integer before casting to uint64_t.
	(THREAD_SETMEM_NC): Likewise.
	* sysdeps/x86_64/tls.h: Include <libc-internal.h>.
	(THREAD_SETMEM): Use cast_to_integer before casting to uint64_t.
	(THREAD_SETMEM_NC): Likewise.

2012-11-21  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/sem_post.c (__old_sem_post): Cast result
	of atomic_increment_val to (void) instead of storing in
	otherwise-unused variable.

	* pthread_cond_timedwait.c (__pthread_cond_timedwait)
	[__NR_clock_gettime]: Cast result of INTERNAL_VSYSCALL to void
	instead of storing in otherwise-unused variable.

2012-11-14  Marcus Shawcroft  <marcus.shawcroft@linaro.org>

	* Makefile (CFLAGS-open.c, CFLAGS-open64.c, CFLAGS-pause.c)
	  (CFLAGS-recv.c, CFLAGS-send.c): Define.

2012-11-06  Chris Metcalf  <cmetcalf@tilera.com>

	* tst-sem14.c (TIMEOUT): Set timeout to 10 seconds.
	* tst-cond24.c (TIMEOUT): Increase from 10 to 20 seconds.

2012-11-05  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* pthread_cond_timedwait.c (__pthread_cond_timedwait): Time out
	if absolute timeout is negative.
	[__ASSUME_FUTEX_CLOCK_REALTIME &&
	lll_futex_timed_wait_bitset]: Use lll_futex_timed_wait_bitset.
	* pthread_rwlock_timedrdlock.c (pthread_rwlock_timedrdlock):
	Likewise.
	* pthread_rwlock_timedwrlock.c (pthread_rwlock_timedwrlock):